--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kth-node-cosmos-db",
+  "name": "@kth/kth-node-cosmos-db",
   "version": "1.0.1",
   "description": "Node.js module for projects using Azure Cosmos Db.",
   "main": "index.js",
