--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,13 @@
     "url": "https://github.com/KTH/kth-node-cosmos-db/issues"
   },
   "homepage": "https://github.com/KTH/kth-node-cosmos-db#readme",
-  "peerDependencies": {
-    "documentdb": "^1.14.4",
-    "kth-node-log": "^3.0.1"
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "mockery": "^2.1.0"
+  },
+  "dependencies": {
+    "documentdb": "^1.14.5",
+    "kth-node-log": "^3.0.2"
   }
 }
