--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "type": "git",
     "url": "git+https://github.com/KTH/kth-node-cosmos-db.git"
   },
+  "author": {
+    "name": "KTH",
+    "email": "infosys@kth.se",
+    "url": "https://github.com/KTH"
+  },
   "keywords": [
     "kth",
     "node",
