--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
   },
   "homepage": "https://github.com/KTH/kth-node-cosmos-db#readme",
   "devDependencies": {
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
     "kth-node-log": "^3.0.2",
-    "mocha": "^6.2.0",
+    "mocha": "^7.0.1",
     "mockery": "^2.1.0",
-    "mongodb": "^3.3.2",
+    "mongodb": "^3.5.2",
     "mongodb-core": "^3.2.7",
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
   "dependencies": {
-    "documentdb": "^1.15.3"
+    "@azure/cosmos": "^3.5.4"
   },
   "peerDependencies": {
     "kth-node-log": "^3.0.2"
