--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "jest"],
   "parser": "babel-eslint",
   "rules": {
     "prettier/prettier": ["error"],
@@ -18,6 +18,7 @@
     "jsx-a11y/img-has-alt": "off"
   },
   "env": {
-    "node": true
+    "node": true,
+    "jest": true
   }
 }
