--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "mocha test/** --exit",
+    "test": "NODE_ENV=delvelopment && jest --watchAll /lib/",
     "postversion": "git push && git push --tags",
     "build": "./build.sh"
   },
@@ -32,26 +32,26 @@
   },
   "homepage": "https://github.com/KTH/kth-node-cosmos-db#readme",
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "kth-node-log": "^3.0.2",
-    "mocha": "^7.0.1",
+    "jest": "^25.1.0",
+    
+    "mocha": "^7.1.0",
     "mockery": "^2.1.0",
-    "mongodb": "^3.5.2",
+    "mongodb": "^3.5.4",
     "mongodb-core": "^3.2.7",
     "prettier": "^1.19.1"
   },
   "dependencies": {
-    "@azure/cosmos": "^3.5.4"
-  },
-  "peerDependencies": {
+    "@azure/cosmos": "^3.6.2",
     "kth-node-log": "^3.0.2"
   }
 }
