--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "NODE_ENV=delvelopment && jest --watchAll /lib/",
+    "test": "NODE_ENV=development && jest",
+    "test:watch": "NODE_ENV=development && jest --watchAll",
     "postversion": "git push && git push --tags",
     "build": "./build.sh"
   },
@@ -32,8 +33,8 @@
   },
   "homepage": "https://github.com/KTH/kth-node-cosmos-db#readme",
   "devDependencies": {
+    "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -43,11 +44,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "jest": "^25.1.0",
-    
-    "mocha": "^7.1.0",
-    "mockery": "^2.1.0",
+    "jest-extended": "^0.11.5",
     "mongodb": "^3.5.4",
     "mongodb-core": "^3.2.7",
+    "mongoose": "^5.9.4",
     "prettier": "^1.19.1"
   },
   "dependencies": {
