--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kth/kth-node-cosmos-db",
   "version": "4.0.0",
   "description": "Node.js module for projects using Azure Cosmos Db.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib"
   },
