Unit testing (WIP): mongoDB mocked, wrap() fixed

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.8.2",
@@ -47,9 +47,10 @@
     "eslint-plugin-react": "^7.18.3",
     "jest": "^25.1.0",
     "jest-extended": "^0.11.5",
-    "mongodb": "^3.5.4",
+    "mongodb": "^3.5.5",
     "mongodb-core": "^3.2.7",
-    "mongoose": "^5.9.4",
+    "mongodb-memory-server": "^6.3.3",
+    "mongoose": "^5.9.5",
     "prettier": "^1.19.1",
     "uuid": "^7.0.2"
   },
