--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kth/kth-node-cosmos-db",
-  "version": "4.0.5",
+  "version": "4.0.6",
   "description": "Node.js module for projects using Azure Cosmos Db.",
   "main": "lib/index.js",
   "directories": {
@@ -60,12 +60,12 @@
     "mongodb": "^3.5.5",
     "mongodb-core": "^3.2.7",
     "mongodb-memory-server": "^6.5.1",
+    "mongoose": "^5.9.7",
     "prettier": "^1.19.1",
     "uuid": "^7.0.3"
   },
   "dependencies": {
     "@azure/cosmos": "^3.6.2",
-    "kth-node-log": "^3.0.2",
-    "mongoose": "^5.9.7"
+    "kth-node-log": "^3.0.2"
   }
 }
