--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mongodb-memory-server": "^6.5.1",
     "mongoose": "^5.9.7",
     "prettier": "^1.19.1",
+    "table": "^5.4.6",
     "uuid": "^7.0.3"
   },
   "dependencies": {
