--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kth/kth-node-cosmos-db",
-  "version": "4.0.7",
+  "version": "4.0.8",
   "description": "Node.js module for projects using Azure Cosmos Db.",
   "main": "lib/index.js",
   "directories": {
@@ -11,9 +11,10 @@
     "test:mockup": "UNIT_TEST_COSMOSDB_CONNECTION=false jest",
     "test:watch": "jest --watch",
     "test:notify": "jest --watch --notify",
-    "test:coverage": "UNIT_TEST_COSMOSDB_CONNECTION=false JEST_MODE=coverage jest --collectCoverage --detectOpenHandles",
-    "test:coverage:all": "UNIT_TEST_COSMOSDB_CONNECTION=false JEST_MODE=coverage jest --collectCoverage --detectOpenHandles --testMatch \"**/*.?(integration-)test.js\"",
+    "test:coverage": "rm -rf ./coverage && UNIT_TEST_COSMOSDB_CONNECTION=false JEST_MODE=coverage jest --collectCoverage --detectOpenHandles",
+    "test:coverage:all": "rm -rf ./coverage && UNIT_TEST_COSMOSDB_CONNECTION=false JEST_MODE=coverage jest --collectCoverage --detectOpenHandles --testMatch \"**/*.?(integration-)test.js\"",
     "test:integration": "jest --testMatch \"<rootDir>/test/**/*.integration-test.js\"",
+    "test:integration:full": "INTEGRATION_TEST_FULL_SET=true jest --testMatch \"<rootDir>/test/**/*.integration-test.js\"",
     "test:integration:watch": "jest --testMatch \"<rootDir>/test/**/*.integration-test.js\" --watch",
     "test:integration:notify": "jest --testMatch \"<rootDir>/test/**/*.integration-test.js\" --watch --notify",
     "dependency-graph:update": "madge --image dependencies-full.svg . && madge --image dependencies-lib.svg lib/index.js",
