--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@kth/kth-node-cosmos-db",
   "version": "4.1.0",
   "description": "Node.js module for projects using Azure Cosmos Db.",
+  "automaticPublish": "true",
   "main": "lib/index.js",
   "directories": {
     "lib": "lib"
